<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_name"
        android:id="@+id/profile_name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_email"
        android:id="@+id/profile_mail"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true" />

    <com.facebook.widget.ProfilePictureView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_picture"
        android:layout_above="@+id/profile_name"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/user_image" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button_text"
        android:id="@+id/logoutButton"
        android:background="@color/com_facebook_blue"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/profile_mail"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>